test/resources/inference/neg/List-Replicate.sq
data List a where
	Nil :: List a
	Cons :: x: a -> xs: List a -> List a
  
replicate :: n: {Int | _v >= 0} -> x: {n**a| |n} -> List a
replicate = \n. \x.
  if n <= 0
    then Nil
    else Cons x (tick 1 (replicate (n - 1) x))